--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
       </div>
 
-      <div class="row mb-2">
+      <div class="row mb-2 my-1">
         <div class="col-md-2">
           <select class="form-control" id="ano">
             <option value="">Ano</option>
@@ -59,7 +59,7 @@
           </select>
         </div>
 
-        <div class="col-md-2">
+        <div class="col-md-2 my-1">
           <select class="form-control" id="mes">
             <option value="">Mês</option>
             <option value="1">Janeiro</option>
@@ -77,11 +77,11 @@
           </select>
         </div>
         
-        <div class="col-md-2">
+        <div class="col-md-2 my-1">
           <input type="text" class="form-control" placeholder="Dia" id="dia" />
         </div>
 
-        <div class="col-md-6">
+        <div class="col-md-6 my-1">
           <select class="form-control" id="tipo">
             <option value="">Tipo</option>
             <option value="1">Alimentação</option>
@@ -94,15 +94,15 @@
       </div>
 
       <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-8 my-1">
           <input type="text" class="form-control" placeholder="Descrição" id="descricao" />
         </div>
 
-        <div class="col-md-2">
+        <div class="col-md-2 my-1">
           <input type="text" class="form-control" placeholder="Valor" id="valor" />
         </div>
 
-        <div class="col-md-2 d-flex justify-content-end">
+        <div class="col-md-2 d-flex justify-content-end my-1">
           <button type="button" class="btn btn-primary" onclick="cadastrarDespesa()">
             <i class="fas fa-plus"></i>
           </button>
