--- a/consulta.html
+++ b/consulta.html
@@ -53,14 +53,14 @@
       </div>
 
       <div class="row mb-2">
-        <div class="col-md-2">
+        <div class="col-md-2 my-1">
           <select class="form-control" id="ano">
             <option value="">Ano</option>
             <option value="2022">2022</option>
           </select>
         </div>
 
-        <div class="col-md-2">
+        <div class="col-md-2 my-1">
           <select class="form-control" id="mes">
             <option value="">Mês</option>
             <option value="1">Janeiro</option>
@@ -78,11 +78,11 @@
           </select>
         </div>
         
-        <div class="col-md-2">
+        <div class="col-md-2 my-1">
           <input type="text" class="form-control" placeholder="Dia" id="dia" />
         </div>
 
-        <div class="col-md-6">
+        <div class="col-md-6 my-1">
           <select class="form-control" id="tipo">
             <option value="">Tipo</option>
             <option value="1">Alimentação</option>
@@ -94,16 +94,16 @@
         </div>
       </div>
 
-      <div class="row  mb-5">
+      <div class="row  mb-5 my-1">
         <div class="col-md-8">
           <input type="text" class="form-control" placeholder="Descrição" id="descricao" />
         </div>
 
-        <div class="col-md-2">
+        <div class="col-md-2 my-1">
           <input type="text" class="form-control" placeholder="Valor" id="valor" />
         </div>
 
-        <div class="col-md-2 d-flex justify-content-end">
+        <div class="col-md-2 d-flex justify-content-end my-1">
           <button type="button" class="btn btn-primary" onclick="pesquisarDespesa()">
             <i class="fas fa-search"></i>
           </button>
